--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <!--Link a CSS-->
     <link rel="stylesheet" href="assets/css/estilo.css">
 
+    < script  async  src = " https://www.googletagmanager.com/gtag/js?id=G-YN0Q1VKHQ4 " > </ script >
+< script >
+  ventana . dataLayer  =  ventana . dataLayer  ||  [ ] ;
+  function  gtag ( ) { dataLayer . empujar ( argumentos ) ; }
+  gtag ( 'js' ,  nueva  fecha ( ) ) ;
+
+  gtag ( 'configuración' ,  'G-YN0Q1VKHQ4' ) ;
+</ script >
     <title>Indómito Emporio</title>
 </head>
 <body>
